# kiosk_banner_v2

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.override.yml  docker-compose.yml  nginx.conf  setup.cfg
configs/: site.conf
kiosk_upload/: Dockerfile  manage.py  pyproject.toml
kiosk_upload/kiosk_front/: __init__.py  admin.py  apps.py  forms.py  models.py  views.py
kiosk_upload/kiosk_front/migrations/: 0001_initial.py  0002_alter_kiosk_cinema.py  0002_kiosk_short_name_alter_kiosk_name.py
kiosk_upload/kiosk_upload/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
kiosk_upload/kiosk_upload/components/: __init__.py  _apps_middleware.py  _database.py  _locale.py  _templates.py
kiosk_upload/locale/ru_RU/LC_MESSAGES/: django.mo  django.po
kiosk_upload/templates/: base.html
kiosk_upload/users/: __init__.py  admin.py  apps.py  models.py
kiosk_upload/users/migrations/: 0001_initial.py
kiosk_upload/uwsgi/: uwsgi.ini
scripts/: postgres-init-db.sh
