[tool.poetry]
name = "kiosk-banner-v2"
version = "0.1.0"
description = ""
authors = ["Захаров Павел <pzakharov83@gmail.com>"]
readme = "README.md"
packages = [{include = "kiosk_banner_v2"}]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.1.5"
pre-commit = "^3.0.2"
django-split-settings = "^1.2.0"


[tool.poetry.group.dev.dependencies]
wemake-python-styleguide = "^0.17.0"
mypy = "^0.991"
flake8-django = "^1.1.5"
ipython = "^8.9.0"
add-trailing-comma = "^2.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
